# NNRepLayer

./: .coverage  .gitattributes  .gitignore  LICENSE.md  README.md  TO DO.txt  convert_onnx_2_mat.py  costs.csv  costs2.csv  execute.sh  log.text  net_log.txt  pyproject.toml  real_time_multi_traj.eps  repair_data.mat  setup.sh  simple_rnn.onnx  trajVSref.eps
NNRepLayer/: pyproject.toml
NNRepLayer/nnreplayer/: driver.py  generate_neural_net.ipynb
demos/Affine Transform Demo/: affine_io_dataset.pickle  (+1 more)
demos/Affine Transform Demo 2/: affine_io_dataset.pickle  generate_neural_network_inside.ipynb  repair_layer_demo.ipynb  repair_layer_demo.py
docs/: .coverage  conf.py  generate_html.py
examples/: MIP_NN_3_layer_bounded_weights-Copy1.ipynb  SSE_3out.ipynb  real_time_repair.ipynb
nnreplayer/: dense.py  driver.py  generate_neural_network_inside.ipynb  get_mse.py  get_mse_acas.py  io_data_affine_transform.pickle  mip_layer.py  mip_nn_model.py  parser.py  repair_weights.py  repair_weights_class.py  setup.sh  utils.py
repaired_affine_transform_layer3/: saved_model.pb
simple_rnn/: saved_model.pb
test_nnreplayer/: pyproject.toml
test_nnreplayer/test_nnreplayer/: driver.py
test_nnreplayer/test_nnreplayer/affine_transform_model/: keras_metadata.pb
test_nnreplayer/test_nnreplayer/affine_transform_model/variables/: variables.data-00000-of-00001  variables.index
test_nnreplayer/test_nnreplayer/repaired_affine_transform_layer3/: keras_metadata.pb  saved_model.pb
test_nnreplayer/test_nnreplayer/repaired_affine_transform_layer3/variables/: variables.data-00000-of-00001  variables.index
test_nnreplayer/tests/: test_test_nnreplayer.py
tests/: test_nnreplayer.py
(+3130 files in other folders)
