[tool.poetry]
name = "nnreplayer"
version = "0.0.6"
description = "NN Layer Repair"
authors = ["Tanmay Bhaskar Khandait"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
numpy = "^1.22.1"
tensorflow = "^2.8.0"
matplotlib = "^3.5.1"
Shapely = "^1.8.0"
Pyomo = "^6.2"
scipy = "^1.7.3"
sklearn = "^0.0"
gurobipy = "^9.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
