[tool.poetry]
name = "nnreplayer"
version = "0.0.2"
description = "NN Layer Repair"
authors = ["Tanmay Bhaskar Khandait"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
numpy = "^1.22.1"
tensorflow = "^2.8.0"
matplotlib = "^3.5.1"
Shapely = "^1.8.0"
Pyomo = "^6.2"
scipy = "^1.7.3"
sklearn = "^0.0"
gurobipy = "^9.5.0"
ipykernel = "^6.9.0"
quadprog = "^0.1.11"
coverage = "^6.3.2"
torch = "^1.11.0"
furo = "^2022.4.7"
Sphinx = "^4.5.0"
polytope = "^0.2.3"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
pylint = "^2.12.2"
mypy = "^0.940"
flake8 = "^4.0.1"
black = {version = "^21.7b0", python = ">=3.6.2"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 79



