[tool.poetry]
name = "demos"
version = "0.1.2"
description = "Testing NNRepLayer"
authors = ["daittan <tanmay.khandait@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
nnreplayer = {path = "../NNRepLayer"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
